--- a/html/hot/fire.html
+++ b/html/hot/fire.html
@@ -4,26 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <title>M36文学网</title>
-    <link href="../image/Hutao.png" rel="icon">
+    <link href="../../image/Hutao.png" rel="icon">
 </head>
-<link href="../css/style.css" rel="stylesheet" type="text/css">
+<link href="../../css/style.css" rel="stylesheet" type="text/css">
 
 <body>
-<div class="header"><a href="../index.html" title="返回首页"><img alt="" src="../image/"></a></div>
+<div class="header"><a href="../../index.html" title="返回首页"><img alt="" src="../image/"></a></div>
 
 <ul class="topmenu">
     <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         &nbsp;
     </li>
-    <li><a href="../index.html">首页</a></li>
-    <li><a class="active" href="../html/hot.html">热门推荐</a></li>
-    <li><a href="../html/famous.html">古籍经典</a></li>
-    <li><a href="../html/foreign.html">国外经典</a></li>
-    <li><a href="../html/Wuxia.html">武侠专区</a></li>
-    <li><a href="../html/hist.html">历史专区</a></li>
-    <li><a href="../html/sci.html">科幻专区</a></li>
-    <li><a href="../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../html/classify.html">作品分类</a></li>
+    <li><a href="../../index.html">首页</a></li>
+    <li><a class="active" href="../../html/hot.html">热门推荐</a></li>
+    <li><a href="../../html/famous.html">古籍经典</a></li>
+    <li><a href="../../html/foreign.html">国外经典</a></li>
+    <li><a href="../../html/Wuxia.html">武侠专区</a></li>
+    <li><a href="../../html/hist.html">历史专区</a></li>
+    <li><a href="../../html/sci.html">科幻专区</a></li>
+    <li><a href="../../html/fantasy.html">奇幻专区</a></li>
+    <li><a href="../../html/classify.html">作品分类</a></li>
 </ul>
 <hr color="white">
 <div class="row">
@@ -34,25 +34,27 @@
             <li><a href="zi.html">《骆驼祥子》</a></li>
             <li><a href="santi.html">《三体》</a></li>
             <li><a class="active" href="fire.html">《冰与火之歌》</a></li>
+            <li><a href="people.html">《人间失格》</a></li>
+            <li><a href="year.html">《百年孤独》</a></li>
+            <li><a href="moon.html">《月亮与六便士》</a></li>
+            <li><a href="older.html">《老人与海》</a></li>
         </ul>
     </div>
-
     <div class="content">
         <h1>
-                <span property="v:itemreviewed">
-                    <a class="" href="https://weread.qq.com/web/reader/4ff322305cf7c54ff0b1278"
-                       style="text-decoration:none" target="_blank">冰与火之歌（A Song of Ice and Fire）</a>
+                <span>
+                    <a href="https://weread.qq.com/web/reader/4ff322305cf7c54ff0b1278" style="text-decoration:none"
+                       target="_blank">冰与火之歌（A Song of Ice and Fire）</a>
                 </span>
-            <div class="clear"></div>
         </h1>
-        <div class="subject clearfix">
-            <div id="mainpic" class="">
-                <a class="nbg" href="https://img9.doubanio.com/view/subject/l/public/s27218035.jpg" title="冰与火之歌">
-                    <img src="https://img9.doubanio.com/view/subject/s/public/s27218035.jpg" title="点击看大图"
-                         alt="冰与火之歌" rel="v:photo" style="max-width: 135px;max-height: 200px;">
+        <div>
+            <div>
+                <img src="https://img9.doubanio.com/view/subject/s/public/s27218035.jpg" title="点击看大图"
+                     alt="冰与火之歌"
+                     rel="v:photo" style="max-width: 135px;max-height: 200px;">
                 </a>
             </div>
-            <div id="info" class="">
+            <div>
                     <span>
                         <span class="pl"> 作者</span>:
                         <a class="" href="/author/4612666">乔治·马丁</a>
@@ -74,7 +76,6 @@
                 <span class="pl">丛书:</span>&nbsp;<a>独角兽书系</a><br>
                 <span class="pl">ISBN:</span> 9787223361835<br>
             </div>
-
         </div>
         <div class="indent">
             <h2>
