--- a/html/hot/zi.html
+++ b/html/hot/zi.html
@@ -4,61 +4,61 @@
 <head>
     <meta charset="UTF-8">
     <title>M36文学网</title>
-    <link href="../image/Hutao.png" rel="icon">
+    <link href="../../image/Hutao.png" rel="icon">
 </head>
-<link href="../css/style.css" rel="stylesheet" type="text/css">
+<link href="../../css/style.css" rel="stylesheet" type="text/css">
 
 <body>
-<div class="header"><a href="../index.html" title="返回首页"><img alt="" src="../image/"></a></div>
+<div class="header"><a href="../../index.html" title="返回首页"><img alt="" src="../image/"></a></div>
 
 <ul class="topmenu">
     <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         &nbsp;
     </li>
-    <li><a href="../index.html">首页</a></li>
-    <li><a class="active" href="../html/hot.html">热门推荐</a></li>
-    <li><a href="../html/famous.html">古籍经典</a></li>
-    <li><a href="../html/foreign.html">国外经典</a></li>
-    <li><a href="../html/Wuxia.html">武侠专区</a></li>
-    <li><a href="../html/hist.html">历史专区</a></li>
-    <li><a href="../html/sci.html">科幻专区</a></li>
-    <li><a href="../html/fantasy.html">奇幻专区</a></li>
-    <li><a href="../html/classify.html">作品分类</a></li>
+    <li><a href="../../index.html">首页</a></li>
+    <li><a class="active" href="../../html/hot.html">热门推荐</a></li>
+    <li><a href="../../html/famous.html">古籍经典</a></li>
+    <li><a href="../../html/foreign.html">国外经典</a></li>
+    <li><a href="../../html/Wuxia.html">武侠专区</a></li>
+    <li><a href="../../html/hist.html">历史专区</a></li>
+    <li><a href="../../html/sci.html">科幻专区</a></li>
+    <li><a href="../../html/fantasy.html">奇幻专区</a></li>
+    <li><a href="../../html/classify.html">作品分类</a></li>
 </ul>
 <hr color="white">
 <div class="row">
     <div>
         <ul class="sidemenu">
-            <li><a href="../to live.html">《活着》</a></li>
+            <li><a href="to live.html">《活着》</a></li>
             <li><a href="blood.html">《许三观卖血记》</a></li>
             <li><a class="active" href="zi.html">《骆驼祥子》</a></li>
             <li><a href="santi.html">《三体》</a></li>
             <li><a href="fire.html">《冰与火之歌》</a></li>
+            <li><a href="people.html">《人间失格》</a></li>
+            <li><a href="year.html">《百年孤独》</a></li>
+            <li><a href="moon.html">《月亮与六便士》</a></li>
+            <li><a href="older.html">《老人与海》</a></li>
         </ul>
     </div>
 
     <div class="content">
         <h1>
-                <span property="v:itemreviewed">
+                <span>
                     <a href="https://weread.qq.com/web/reader/fd1328207268785dfd1479dk16732dc0161679091c5aeb1"
                        target="_blank">骆驼祥子</a>
                 </span>
-            <div class="clear"></div>
         </h1>
         <!--书籍图片-->
-        <div class="subject clearfix">
-            <div id="mainpic" class="">
-                <a class="nbg" href="../image/zi.jpg" title="骆驼祥子">
-                    <img src="../image/zi.jpg" title="点击看大图" alt="骆驼祥子" rel="v:photo"
-                         style="max-width: 135px;max-height: 200px;">
+        <div>
+            <div>
+                <img src="../../image/zi.jpg" title="点击看大图" alt="骆驼祥子" rel="v:photo"
+                     style="max-width: 135px;max-height: 200px;">
                 </a>
-
             </div>
             <!--书的详细简介-->
-            <div id="info" class="">
+            <div>
                     <span>
                         <span class="pl"> 作者</span>:
-
                         <a href="https://baike.baidu.com/item/%E8%80%81%E8%88%8D/193756" target="_blank">老舍</a>
                     </span><br>
                 <span class="pl">出版社:</span>
@@ -97,6 +97,7 @@
         </div>
     </div>
 </div>
+<!-- 底部栏 -->
 <div class="footer">
     <h2>
         M36 文学网 Literature|Cultivate|Learn
